update dvc with project

--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -693,6 +693,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-118-bb3d408e025a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mVocab\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcounter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmost_common\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/anaconda3/envs/torch/lib/python3.8/site-packages/torchtext/vocab.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, counter, max_size, min_freq, specials, vectors, unk_init, vectors_cache, specials_first)\u001b[0m\n\u001b[1;32m     70\u001b[0m         \u001b[0;31m# in frequency order\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     71\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mtok\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mspecials\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 72\u001b[0;31m             \u001b[0;32mdel\u001b[0m \u001b[0mcounter\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtok\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     73\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     74\u001b[0m         \u001b[0;31m# sort by frequency, then alphabetically\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
+     ]
+    }
+   ],
+   "source": [
+    "Vocab([i[0] for i in counter.most_common(10)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<torchtext.vocab.Vocab at 0x140640a30>"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Vocab(Counter(dict(counter.most_common(10))))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 49,
    "metadata": {},
    "outputs": [
@@ -742,13 +784,6 @@
     "        return [[vocab[i] for i in tokenizer(text)] for text in X]\n",
     "    return [vocab[i] for i in tokenizer(X)]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -988,11 +1023,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
     "import time\n",
+    "import torch.nn.functional as F\n",
     "\n",
     "def train(dataloader):\n",
     "    model.train()\n",
@@ -1003,7 +1039,7 @@
     "    for idx, (label, text, offsets) in enumerate(dataloader):\n",
     "        optimizer.zero_grad()\n",
     "        predited_label = model(text, offsets)\n",
-    "        loss = criterion(predited_label, label)\n",
+    "        loss = criterion(predited_label, F.one_hot(label, num_classes=num_class).type(torch.FloatTensor))\n",
     "        loss.backward()\n",
     "        torch.nn.utils.clip_grad_norm_(model.parameters(), 0.1)\n",
     "        optimizer.step()\n",
@@ -1024,7 +1060,7 @@
     "    with torch.no_grad():\n",
     "        for idx, (label, text, offsets) in enumerate(dataloader):\n",
     "            predited_label = model(text, offsets)\n",
-    "            loss = criterion(predited_label, label)\n",
+    "            loss = criterion(predited_label, F.one_hot(label, num_classes=num_class).type(torch.FloatTensor))\n",
     "            total_acc += (predited_label.argmax(1) == label).sum().item()\n",
     "            total_count += label.size(0)\n",
     "    return total_acc/total_count"
@@ -1032,74 +1068,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "TextClassificationModel(\n",
+      "  (embedding): EmbeddingBag(102971, 64, mode=mean)\n",
+      "  (fc): Linear(in_features=64, out_features=2, bias=True)\n",
+      ")\n",
       "Cross validation 0-fold\n",
       "-----------------------------------------------------------\n",
-      "| end of epoch   1 | time:  0.42s | valid accuracy    0.910 \n",
+      "| end of epoch   1 | time:  0.43s | valid accuracy    0.800 \n",
       "-----------------------------------------------------------\n",
       "-----------------------------------------------------------\n",
-      "| end of epoch   2 | time:  0.41s | valid accuracy    0.770 \n",
+      "| end of epoch   2 | time:  0.41s | valid accuracy    0.790 \n",
       "-----------------------------------------------------------\n",
       "-----------------------------------------------------------\n",
-      "| end of epoch   3 | time:  0.42s | valid accuracy    0.920 \n",
+      "| end of epoch   3 | time:  0.41s | valid accuracy    0.930 \n",
       "-----------------------------------------------------------\n",
       "Cross validation 1-fold\n",
       "-----------------------------------------------------------\n",
-      "| end of epoch   1 | time:  0.43s | valid accuracy    0.980 \n",
+      "| end of epoch   1 | time:  0.41s | valid accuracy    0.960 \n",
       "-----------------------------------------------------------\n",
       "-----------------------------------------------------------\n",
-      "| end of epoch   2 | time:  0.42s | valid accuracy    0.990 \n",
+      "| end of epoch   2 | time:  0.41s | valid accuracy    0.980 \n",
       "-----------------------------------------------------------\n",
       "-----------------------------------------------------------\n",
       "| end of epoch   3 | time:  0.41s | valid accuracy    0.980 \n",
       "-----------------------------------------------------------\n",
       "Cross validation 2-fold\n",
       "-----------------------------------------------------------\n",
-      "| end of epoch   1 | time:  0.41s | valid accuracy    0.930 \n",
+      "| end of epoch   1 | time:  0.42s | valid accuracy    0.930 \n",
       "-----------------------------------------------------------\n",
       "-----------------------------------------------------------\n",
-      "| end of epoch   2 | time:  0.41s | valid accuracy    0.930 \n",
+      "| end of epoch   2 | time:  0.41s | valid accuracy    0.920 \n",
       "-----------------------------------------------------------\n",
       "-----------------------------------------------------------\n",
-      "| end of epoch   3 | time:  0.41s | valid accuracy    0.930 \n",
+      "| end of epoch   3 | time:  0.42s | valid accuracy    0.920 \n",
       "-----------------------------------------------------------\n",
       "Cross validation 3-fold\n",
       "-----------------------------------------------------------\n",
-      "| end of epoch   1 | time:  0.41s | valid accuracy    0.950 \n",
+      "| end of epoch   1 | time:  0.42s | valid accuracy    0.950 \n",
       "-----------------------------------------------------------\n",
       "-----------------------------------------------------------\n",
       "| end of epoch   2 | time:  0.41s | valid accuracy    0.950 \n",
       "-----------------------------------------------------------\n",
       "-----------------------------------------------------------\n",
-      "| end of epoch   3 | time:  0.41s | valid accuracy    0.950 \n",
+      "| end of epoch   3 | time:  0.42s | valid accuracy    0.950 \n",
       "-----------------------------------------------------------\n",
       "Cross validation 4-fold\n",
-      "-----------------------------------------------------------\n",
-      "| end of epoch   1 | time:  0.41s | valid accuracy    0.950 \n",
-      "-----------------------------------------------------------\n",
-      "-----------------------------------------------------------\n",
-      "| end of epoch   2 | time:  0.41s | valid accuracy    0.950 \n",
-      "-----------------------------------------------------------\n",
-      "-----------------------------------------------------------\n",
-      "| end of epoch   3 | time:  0.40s | valid accuracy    0.950 \n",
-      "-----------------------------------------------------------\n",
-      "Cross validation 5-fold\n",
-      "-----------------------------------------------------------\n",
-      "| end of epoch   1 | time:  0.41s | valid accuracy    0.930 \n",
-      "-----------------------------------------------------------\n",
-      "-----------------------------------------------------------\n",
-      "| end of epoch   2 | time:  0.41s | valid accuracy    0.940 \n",
-      "-----------------------------------------------------------\n",
-      "-----------------------------------------------------------\n",
-      "| end of epoch   3 | time:  0.42s | valid accuracy    0.930 \n",
-      "-----------------------------------------------------------\n",
-      "Cross validation 6-fold\n",
       "-----------------------------------------------------------\n",
       "| end of epoch   1 | time:  0.41s | valid accuracy    0.930 \n",
       "-----------------------------------------------------------\n",
@@ -1109,38 +1129,58 @@
       "-----------------------------------------------------------\n",
       "| end of epoch   3 | time:  0.41s | valid accuracy    0.930 \n",
       "-----------------------------------------------------------\n",
+      "Cross validation 5-fold\n",
+      "-----------------------------------------------------------\n",
+      "| end of epoch   1 | time:  0.42s | valid accuracy    0.910 \n",
+      "-----------------------------------------------------------\n",
+      "-----------------------------------------------------------\n",
+      "| end of epoch   2 | time:  0.42s | valid accuracy    0.910 \n",
+      "-----------------------------------------------------------\n",
+      "-----------------------------------------------------------\n",
+      "| end of epoch   3 | time:  0.42s | valid accuracy    0.910 \n",
+      "-----------------------------------------------------------\n",
+      "Cross validation 6-fold\n",
+      "-----------------------------------------------------------\n",
+      "| end of epoch   1 | time:  0.43s | valid accuracy    0.940 \n",
+      "-----------------------------------------------------------\n",
+      "-----------------------------------------------------------\n",
+      "| end of epoch   2 | time:  0.42s | valid accuracy    0.940 \n",
+      "-----------------------------------------------------------\n",
+      "-----------------------------------------------------------\n",
+      "| end of epoch   3 | time:  0.42s | valid accuracy    0.940 \n",
+      "-----------------------------------------------------------\n",
       "Cross validation 7-fold\n",
-      "-----------------------------------------------------------\n",
-      "| end of epoch   1 | time:  0.41s | valid accuracy    0.950 \n",
-      "-----------------------------------------------------------\n",
-      "-----------------------------------------------------------\n",
-      "| end of epoch   2 | time:  0.40s | valid accuracy    0.950 \n",
-      "-----------------------------------------------------------\n",
-      "-----------------------------------------------------------\n",
-      "| end of epoch   3 | time:  0.41s | valid accuracy    0.950 \n",
-      "-----------------------------------------------------------\n",
-      "Cross validation 8-fold\n",
       "-----------------------------------------------------------\n",
       "| end of epoch   1 | time:  0.41s | valid accuracy    0.940 \n",
       "-----------------------------------------------------------\n",
       "-----------------------------------------------------------\n",
-      "| end of epoch   2 | time:  0.41s | valid accuracy    0.940 \n",
+      "| end of epoch   2 | time:  0.40s | valid accuracy    0.940 \n",
       "-----------------------------------------------------------\n",
       "-----------------------------------------------------------\n",
       "| end of epoch   3 | time:  0.40s | valid accuracy    0.940 \n",
       "-----------------------------------------------------------\n",
+      "Cross validation 8-fold\n",
+      "-----------------------------------------------------------\n",
+      "| end of epoch   1 | time:  0.42s | valid accuracy    0.920 \n",
+      "-----------------------------------------------------------\n",
+      "-----------------------------------------------------------\n",
+      "| end of epoch   2 | time:  0.41s | valid accuracy    0.920 \n",
+      "-----------------------------------------------------------\n",
+      "-----------------------------------------------------------\n",
+      "| end of epoch   3 | time:  0.41s | valid accuracy    0.920 \n",
+      "-----------------------------------------------------------\n",
       "Cross validation 9-fold\n",
       "-----------------------------------------------------------\n",
-      "| end of epoch   1 | time:  0.41s | valid accuracy    0.950 \n",
+      "| end of epoch   1 | time:  0.44s | valid accuracy    0.930 \n",
       "-----------------------------------------------------------\n",
       "-----------------------------------------------------------\n",
-      "| end of epoch   2 | time:  0.41s | valid accuracy    0.950 \n",
+      "| end of epoch   2 | time:  0.41s | valid accuracy    0.930 \n",
       "-----------------------------------------------------------\n",
       "-----------------------------------------------------------\n",
-      "| end of epoch   3 | time:  0.45s | valid accuracy    0.950 \n",
+      "| end of epoch   3 | time:  0.41s | valid accuracy    0.930 \n",
       "-----------------------------------------------------------\n",
-      "[0.92, 0.99, 0.93, 0.95, 0.95, 0.94, 0.93, 0.95, 0.94, 0.95]\n",
-      "0.945\n"
+      "[0.93, 0.98, 0.93, 0.95, 0.93, 0.91, 0.94, 0.94, 0.92, 0.93]\n",
+      "0.9359999999999999\n"
      ]
     }
    ],
@@ -1151,7 +1191,7 @@
     "LR = 5  # learning rate\n",
     "BATCH_SIZE = 64 # batch size for training\n",
     "\n",
-    "criterion = torch.nn.CrossEntropyLoss()\n",
+    "criterion = torch.nn.BCEWithLogitsLoss()\n",
     "optimizer = torch.optim.SGD(model.parameters(), lr=LR)\n",
     "scheduler = torch.optim.lr_scheduler.StepLR(optimizer, 1.0, gamma=0.1)\n",
     "\n",
@@ -1175,7 +1215,7 @@
     "#                               shuffle=True, collate_fn=collate_batch)\n",
     "# test_dataloader = DataLoader(test_dataset, batch_size=BATCH_SIZE,\n",
     "#                              shuffle=True, collate_fn=collate_batch)\n",
-    "\n",
+    "print(model)\n",
     "total_acc = []\n",
     "for idx, (train_index, valid_index) in enumerate(kf.split(X)):\n",
     "#     print(\"TRAIN:\", train_index, \"TEST:\", test_index)\n",
