update lstm training

--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -1940,6 +1940,104 @@
       "torch.Size([32, 2])\n",
       "torch.Size([32, 2])\n",
       "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([4, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([4, 2])\n",
+      "[array([1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0]), array([1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0]), array([1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0]), array([1, 0, 0, 0])] [array([1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 0, 0, 0, 0, 1, 0, 0, 1, 1, 1, 1, 1,\n",
+      "       1, 1, 0, 1, 1, 1, 0, 0, 0, 1]), array([0, 1, 1, 1, 0, 0, 1, 1, 0, 1, 0, 0, 0, 0, 0, 1, 0, 1, 1, 0, 0, 1,\n",
+      "       1, 1, 0, 0, 1, 0, 1, 1, 1, 1]), array([0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 0, 0,\n",
+      "       0, 0, 1, 1, 1, 1, 1, 0, 1, 0]), array([1, 0, 0, 1])] 100\n",
+      "(0.5, 0.038461538461538464, 0.07142857142857144, None)\n",
+      "-----------------------------------------------------------\n",
+      "| end of epoch   1 | time: 1770.09s | valid accuracy    0.480 \n",
+      "-----------------------------------------------------------\n",
+      "Cross validation 1-fold\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([4, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([4, 2])\n",
+      "[array([1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0]), array([1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0]), array([1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+      "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0]), array([1, 0, 0, 0])] [array([1, 0, 1, 1, 1, 1, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0,\n",
+      "       1, 1, 1, 0, 1, 0, 0, 1, 0, 1]), array([0, 1, 0, 1, 0, 1, 0, 1, 1, 1, 1, 0, 1, 0, 1, 1, 0, 1, 0, 0, 1, 0,\n",
+      "       0, 1, 1, 0, 1, 0, 0, 0, 1, 1]), array([1, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 1, 1, 0, 1, 0, 0, 0, 1,\n",
+      "       0, 0, 1, 1, 1, 1, 1, 0, 1, 1]), array([0, 1, 1, 1])] 100\n",
+      "(0.5, 0.04081632653061224, 0.07547169811320753, None)\n",
+      "-----------------------------------------------------------\n",
+      "| end of epoch   1 | time: 1824.12s | valid accuracy    0.510 \n",
+      "-----------------------------------------------------------\n",
+      "Cross validation 2-fold\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
       "torch.Size([32, 2])\n"
      ]
     }
