finish lstm training pipeline

--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -2038,6 +2038,8 @@
       "torch.Size([32, 2])\n",
       "torch.Size([32, 2])\n",
       "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
+      "torch.Size([32, 2])\n",
       "torch.Size([32, 2])\n"
      ]
     }
